--- a/DRAFT/app/src/main/res/values/strings.xml
+++ b/DRAFT/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="m_s">m/s</string>
 
     <string name="about_developers">О разработчиках</string>
+    <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="black_theme">Black Theme</string>
     <string name="sunrise_sunset">Sunrise / Sunset</string>
