--- a/DRAFT/app/src/main/res/values/strings.xml
+++ b/DRAFT/app/src/main/res/values/strings.xml
@@ -24,10 +24,16 @@
     <string name="sunrise_sunset">Sunrise / Sunset</string>
     <string name="save">Save</string>
 
-    <string name="developer">Самарин Роман Сергеевич</string>
+    <string name="developer">Samarin Roman Sergeevich</string>
     <string name="my_mail"><u>raffian_bui@mail.ru</u></string>
     <string name="error">Error!</string>
     <string name="city_not_found">City not found</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="story_array_empty">Your story list is empty</string>
+    <string name="settings_save">Settings have been saved</string>
+    <string name="navigation_header">Navigation header</string>
+    <string name="start_screen">Start screen</string>
+    <string name="story">Story</string>
+    <string name="communicate">Communicate</string>
 </resources>
