--- a/DRAFT/app/src/main/res/values/strings.xml
+++ b/DRAFT/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="start_screen">Start screen</string>
     <string name="story">Story</string>
     <string name="communicate">Communicate</string>
+    <string name="close">Close</string>
 </resources>
