добавлен вывод диалога об ошибке - город не найден

--- a/DRAFT/app/src/main/res/values-ru/strings.xml
+++ b/DRAFT/app/src/main/res/values-ru/strings.xml
@@ -38,4 +38,6 @@
     <string name="story">История</string>
     <string name="communicate">Communicate</string>
     <string name="close">Close</string>
+    <string name="file_not_found">File not found</string>
+    <string name="fail_connection">Fail connection</string>
 </resources>
