--- a/DRAFT/app/src/main/res/values/strings.xml
+++ b/DRAFT/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="wind_speed">Wind speed</string>
     <string name="m_s">m/s</string>
 
-    <string name="about_developers">О разработчиках</string>
+    <string name="about_developers">About developers</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="black_theme">Black Theme</string>
@@ -39,4 +39,6 @@
     <string name="close">Close</string>
     <string name="file_not_found">File not found</string>
     <string name="fail_connection">Fail connection</string>
+    <string name="error_msg_part_1"> \"</string>
+    <string name="error_msg_part_2">\" city not found</string>
 </resources>
