--- a/DRAFT/app/src/main/res/values-ru/strings.xml
+++ b/DRAFT/app/src/main/res/values-ru/strings.xml
@@ -43,9 +43,10 @@
     <string name="error_msg_part_1">Город \"</string>
     <string name="error_msg_part_2">\" не найден</string>
 
+    <string name="all_history">Вся история</string>
     <string name="filter_by_city">Фильтр по городу</string>
     <string name="filter_by_date">Фильтр по дате</string>
     <string name="filter_by_temp">Фильтр по температуре</string>
-    <string name="delete">Удалить строку</string>
+    <string name="delete_position">Удалить позицию</string>
     <string name="delete_all">Очистить историю</string>
 </resources>
