--- a/DRAFT/app/src/main/res/values/strings.xml
+++ b/DRAFT/app/src/main/res/values/strings.xml
@@ -48,6 +48,8 @@
     <string name="filter_by_temp">Filter by temperature</string>
     <string name="delete_position">Delete position</string>
     <string name="delete_all">Delete All</string>
+
     <string name="receiver_title">My Broadcast Receiver</string>
     <string name="low_battery">Low battery</string>
+    <string name="network_is_not_connected">Network is not connected</string>
 </resources>
