--- a/DRAFT/app/src/main/res/values-ru/strings.xml
+++ b/DRAFT/app/src/main/res/values-ru/strings.xml
@@ -34,7 +34,8 @@
     <string name="story_array_empty">Ваш список истории пуст</string>
     <string name="settings_save">Настройки сохранены</string>
     <string name="navigation_header">Navigation header</string>
-    <string name="start_screen">Начальный экран</string>
+    <string name="my_location">Моё местоположение</string>
+    <string name="list_of_cities">Список городов</string>
     <string name="story">История</string>
     <string name="communicate">Communicate</string>
     <string name="close">Закрыть</string>
