--- a/DRAFT/app/src/main/res/values/strings.xml
+++ b/DRAFT/app/src/main/res/values/strings.xml
@@ -33,7 +33,8 @@
     <string name="story_array_empty">Your story list is empty</string>
     <string name="settings_save">Settings have been saved</string>
     <string name="navigation_header">Navigation header</string>
-    <string name="start_screen">Start screen</string>
+    <string name="my_location">My location</string>
+    <string name="list_of_cities">List of cities</string>
     <string name="story">Story</string>
     <string name="communicate">Communicate</string>
     <string name="close">Close</string>
