--- a/DRAFT/app/src/main/res/values-ru/strings.xml
+++ b/DRAFT/app/src/main/res/values-ru/strings.xml
@@ -54,4 +54,7 @@
     <string name="receiver_title">My Broadcast Receiver</string>
     <string name="low_battery">Низкий заряд батареи</string>
     <string name="network_is_not_connected">Сеть не подключена</string>
+
+    <string name="my_api_key"></string>
+    <string name="google_map">Google Map</string>
 </resources>
