обновлен gradle и AS

--- a/DRAFT/app/src/main/res/values-ru/strings.xml
+++ b/DRAFT/app/src/main/res/values-ru/strings.xml
@@ -57,4 +57,5 @@
 
     <string name="my_api_key"></string>
     <string name="google_map">Google Map</string>
+    <string name="sign_out">Sign out</string>
 </resources>
