--- a/DRAFT/app/src/main/res/values/strings.xml
+++ b/DRAFT/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
 
     <string name="my_api_key"></string>
     <string name="google_map">Google Map</string>
+    <string name="sign_out">Sign out</string>
 </resources>
