--- a/DRAFT/app/src/main/res/values/strings.xml
+++ b/DRAFT/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="low_battery">Low battery</string>
     <string name="network_is_not_connected">Network is not connected</string>
 
-    <string name="my_api_key"></string>
+    <string name="my_api_key">ВСТАВИТЬ!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</string>
     <string name="google_map">Google Map</string>
     <string name="sign_out">Sign out</string>
 </resources>
